--- a/p001_multiples_of_3_and_5/Cargo.toml
+++ b/p001_multiples_of_3_and_5/Cargo.toml
@@ -2,5 +2,6 @@
 name = "p001_multiples_of_3_and_5"
 version = "0.1.0"
 authors = ["Shion Yamashita <shioyama1118@gmail.com>"]
+edition = "2018"
 
 [dependencies]
