--- a/p002_even_fibonacci_numbers/Cargo.toml
+++ b/p002_even_fibonacci_numbers/Cargo.toml
@@ -2,5 +2,6 @@
 name = "p002_even_fibonacci_numbers"
 version = "0.1.0"
 authors = ["Shion Yamashita <shioyama1118@gmail.com>"]
+edition = "2018"
 
 [dependencies]
